--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             "Chúc nhóc valentine vui vẻ",
             "Chị yêu em nhất trên đời",
             "Hãy luôn bên cạnh chị nhé",
-            "Là người tuyệt vời nhất",
+            "Em là người tuyệt vời nhất",
             "Chúc em luôn hạnh phúc",
             "❤ YÊU EM ❤"
         ];
